remove KWrite window from guiFactory on close

message on console was:
KXMLGUIClient::~KXMLGUIClient: 0x9d22690 deleted without having been removed from the factory first

BUG: 266538